-- 2023.01.24 - V3.1.2

- feat: Add support for admin groups and command overrides
- fix: Use of cache, where player not loaded yet
- fix: Player not loaded on mapchange

-- 2023.01.23 - V3.1.1

- feat: Add Brazilian Portuguese translation (by Gabriel 'sopax' Lima)
- fix: ClanTag problems on players with no permissions (#112)
- fix: Add TianxSky as translator to README
- fix: Cache gets deleted before saved sometimes
- fix: Duplicated load and save for players on map change
- fix: GameRule was used before it was initiated by the server
- fix: PlayerDeath caused crash on mapchange

-- 2023.01.22 - V3.1.0

- feat: Add translation for Spanish language (by criskkky)
- feat: Add translation for Chinese (Simplified, People's Republic of China) language (by TianxSky)
- feat: CFG to set custom name for LVLRanks Table (#102)
- feat: Admin list with custom colors for each permission
- feat: ClanTags by permissions
- feat: Added arg to top command (!top 8)
- feat: Add immunity check for targeting commands
- fix: DynamicPoints integer devision (by TianxSky)
- fix: Change timestamp to unix timestamp (by stefanx111)
- fix: Missing prefixes for MySQL queries (by rigE08)
- fix: Block MySQL save for people with SteamID = 0
- fix: EventPlayerTeam targets not yet loaded players (#110)
- fix: Prevent load with wrong database configs
- fix: Crashes on mapchange
- fix: Duplicated player load into cache
- fix: Thread problems
- fix: Time wont save (Spawn resets it)

-- 2023.12.30 - V3.0.5

- fix: KillStreak resets on spawn

-- 2023.12.29 - V3.0.4

- fix: KillStreaks after bot control
- fix: Stats not saved
- fix: Remove debug print
- fix: NaN values in stats

-- 2023.12.29 - V3.0.3

- feat: Add translation for Latvian language (by rcon420)
- feat: Killstreak can be now "remembered" until player die (seconds-between-kills = 0)
- fix: MySQL support for emojis and special characters
- fix: Add emoji support for player names
- fix: Replace STEAM_0 with STEAM_1 to match old lvlranks