@@ -118,6 +118,7 @@ I really appreciate the help of the following people who translated the plugin i
 - [**rcon420**](https://github.com/rcon420): Latvian
 - [**criskkky**](https://github.com/criskkky): Spanish
 - [**TianxSky**](https://github.com/TianxSky): Chinese (cn)
+- [**Gabriel 'sopax' Lima**](https://github.com/gabrielsdelima75): Brazilian Portuguese
 
 <p align="right">(<a href="#readme-top">back to top</a>)</p>
 
